tests/snapshots/formats__swap__mkswap.img.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ mkswap.img — Linux swap v1 "realswap", 40.0 KiB (10 pages of 4.0 KiB)  [0x0+0xa000]
    Boot bits  [0x0+0x400]
  ▾ Header  [0x400+0x2c]
      Version: 1  [0x400+0x4]
      Last page: 9  [0x404+0x4]
      Bad pages: 0  [0x408+0x4]
      UUID: "11223344-5566-7788-99aa-bbccddeeff00"  [0x40c+0x10]
      Label: "realswap"  [0x41c+0x10]
    Signature: "SWAPSPACE2"  [0xff6+0xa]
    Swap pages — 36.0 KiB  [0x1000+0x9000]
